dev/tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tools
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: hub.ru:4567/b2c/ci-tools/cli:latest
    imagePullPolicy: Always
    #command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
    #command: ['/bin/bash', '-c', '/tools/clone-repo.sh']
    #command: ['/bin/bash']
    volumeMounts:
    - mountPath: /tools/git
      name: nfs
      subPath: git
    - mountPath: /tools/cms
      name: nfs
      subPath: cms
    - mountPath: /tools/gateway-service
      name: nfs
      subPath: gateway-service
    - mountPath: /tools/auth-service
      name: nfs
      subPath: auth-service
    - mountPath: /tools/system-journal
      name: nfs
      subPath: system-journal
  volumes:
  - name: git-volume
    emptyDir: {}
  - name: nfs
    persistentVolumeClaim:
      claimName: nfs
  imagePullSecrets:
  - name: registry-cred
  restartPolicy: Always
