dev/cms-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-php-service
  labels:
    app: cms
    version: "18.09"
spec:
  type: NodePort
  ports:
  - port: 9000
    name: server
    nodePort: 39000
  selector:
    name: cms-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-php-deployment
  labels:
    name: cms-php-deployment
    app: cms
    version: "18.09"
spec:
  replicas: 3
  selector:
    matchLabels:
      name: cms-php
  template:
    metadata:
      labels:
        app: cms-php
        name: cms-php
        version: "18.09"
    spec:
      containers:
      - name: cms-php
        image: hub.ru:4567/b2c/cms/php-fpm:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /app/upload
          name: nfs
          subPath: cms/upload
        - mountPath: /app/storage
          name: nfs
          subPath: cms/storage
        - mountPath: /app/backend/web/assets
          name: nfs
          subPath: cms/backend/web/assets
        - mountPath: /app/frontend/web/text_cache
          name: nfs
          subPath: cms/frontend/web/text_cache
      imagePullSecrets:
      - name: registry-cred
      restartPolicy: Always
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
