dev/cms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
  labels:
    name: cms-service
    app: cms
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30080
    name: http
  - port: 443
    nodePort: 443
    name: https
  selector:
    name: cms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-deployment
  labels:
    name: cms-deployment
    app: cms
    version: "18.09"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cms
  template:
    metadata:
      labels:
        app: cms
        name: cms
        version: "18.09"
    spec:
      containers:
      - name: cms
        image: hub.ru:4567/b2c/cms:dev
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo 'test 123' && service filebeat start"]
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - mountPath: /var/log/nginx
            name: cms-logs-storage
          - mountPath: /app/frontend/web/text_cache
            name: nfs
            subPath: cms/frontend/web/text_cache
          - mountPath: /app/backend/web/assets
            name: nfs
            subPath: cms/backend/web/assets
          - mountPath: /app/upload
            name: nfs
            subPath: cms/upload
          - mountPath: /app/storage
            name: nfs
            subPath: cms/storage
          - mountPath: /etc/nginx/nginx.conf
            name: nfs
            subPath: cms/nginx/nginx.conf
          - mountPath: /etc/nginx/conf.d/vhost.conf
            name: nfs
            subPath: cms/nginx/vhost.conf
          - mountPath: /app/frontend/web/spa/api/v1/app_config.json
            name: nfs
            subPath: cms/api/v1/app_config.json
          - mountPath: /app/frontend/web/spa/api/v1/env_config.json
            name: nfs
            subPath: cms/api/v1/env_config.json
          - mountPath: /ssl
            name: nfs
            subPath: cms/ssl
      imagePullSecrets:
      - name: registry-cred
      volumes:
      - name: cms-logs-storage
        hostPath:
          path: /mnt/cms-logs
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
