dev/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    name: dashboard-service
    app: dashboard
    version: "18.09"
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
    nodePort: 38081
  selector:
    name: dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    name: dashboard-deployment
    app: dashboard
    version: "18.09"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dashboard
  template:
    metadata:
      labels:
        app: dashboard
        name: dashboard
    spec:
      containers:
      - name: dashboard
        image: hub.ru:4567/b2c/gateway-service/dashboard:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-cred
