dev/gateway-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-db-service
  labels:
    name: gateway-db-service
    app: gateway
spec:
  type: NodePort
  ports:
  - port: 3306
    nodePort: 33306
    name: mysql
  selector:
    name: gateway-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-db-deployment
  labels:
    name: gateway-db-deployment
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gateway-db
  template:
    metadata:
      labels:
        app: gateway
        name: gateway-db
    spec:
      containers:
      - name: gateway-db
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        #      - mountPath: /var/lib/mysql
        #        name: cms-db-storage
        - mountPath: /docker-entrypoint-initdb.d
          name: nfs
          subPath: gateway-service/mysql/sql
        - mountPath: /etc/mysql/conf.d
          name: nfs
          subPath: gateway-service/mysql/db-config
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
