dev/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    name: gateway-service
    app: gateway
    version: "18.09"
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
    nodePort: 38080
  selector:
    name: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    name: gateway-deployment
    app: gateway
    version: "18.09"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gateway
  template:
    metadata:
      labels:
        app: gateway
        name: gateway
    spec:
      containers:
      - name: gateway
        image: hub.ru:4567/b2c/gateway-service:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /app/payment-gateway-cert/
          name: nfs
          subPath: gateway-service/payment-gateway-cert
      imagePullSecrets:
      - name: registry-cred
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
