dev/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    name: redis-service
    app: redis
spec:
  type: NodePort
  ports:
  - port: 6379
    nodePort: 6379
    name: redis
  selector:
    name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    name: redis-deployment
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        app: redis
        name: redis
    spec:
      containers:
      - name: redis
        image: redis:4.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
      restartPolicy: Always
